--- a/appdriver/src/main/res/values/themes.xml
+++ b/appdriver/src/main/res/values/themes.xml
@@ -174,6 +174,12 @@
         <item name="android:textSize">25sp</item>
     </style>
 
+    <style name="PrimaryHeaderBlackStyle">
+        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
     <style name="DescriptionHeaderStyle">
         <item name="android:fontFamily">@font/roboto_light</item>
         <item name="android:textSize">12sp</item>
