added new drawable icons and new image style for icon guan kay banner that adapts on light and night mode

--- a/appdriver/src/main/res/values-night/themes.xml
+++ b/appdriver/src/main/res/values-night/themes.xml
@@ -183,4 +183,8 @@
         <item name="android:minWidth">48dp</item>
         <item name="android:minHeight">48dp</item>
     </style>
+
+    <style name="Kay_BannerMode" parent="">
+        <item name="android:src">@drawable/img_header_background_dark</item>
+    </style>
 </resources>
